@@ -81,6 +81,7 @@
 #define general_badgenre_type				"BADGENRE"
 #define general_badyear_type				"BADYEAR"
 #define general_badbitrate_type				"BADBITRATE"
+#define general_badpreset_type				"BADPRESET"
 #define general_incomplete_type				"INCOMPLETE"
 #define bad_file_crc_type				"BAD_FILE_CRC"
 #define bad_file_0size_type				"BAD_FILE_0SIZE"
@@ -91,14 +92,16 @@
 #define bad_file_genre_type				"BAD_FILE_GENRE"
 #define bad_file_year_type				"BAD_FILE_YEAR"
 #define bad_file_bitrate_type				"BAD_FILE_BITRATE"
+#define bad_file_vbr_preset_type			"BAD_FILE_VBR_PRESET"
 #define bad_file_disallowed_type			"BAD_FILE_DISALLOWED"
 #define bad_file_nfo_type				"BAD_FILE_DUPENFO"
 #define speed_type					"SPEEDTEST"
 
-#define deny_double_msg		"{%U} {%G} {%r} {%n}"
-#define audio_cbr_warn_msg	"{%U} {%G} {%X}"
-#define audio_year_warn_msg	"{%U} {%G} {%Y}"
-#define audio_genre_warn_msg	"{%U} {%G} {%w}"
+#define deny_double_msg			"{%U} {%G} {%r} {%n}"
+#define audio_cbr_warn_msg		"{%U} {%G} {%X}"
+#define audio_year_warn_msg		"{%U} {%G} {%Y}"
+#define audio_genre_warn_msg		"{%U} {%G} {%w}"
+#define audio_vbr_preset_warn_msg	"{%U} {%G} {%I}"
 
 #define post_stats		"{%u} {%g} {%F} {%.1m} {%d} {%.0A} {%.0a} %C0 %c0 %l %L"
 #define winner			"dummy_winner"
